Fixed #288 - category color picker width too small on mobile; added two new category colors; re-arranged color grid (6x3)

--- a/src/main/resources/static/css/categories.css
+++ b/src/main/resources/static/css/categories.css
@@ -11,6 +11,7 @@
 
 .category-color {
     height: 35px;
+    width: 90%;
     border-radius: 5px;
     border: 2px solid #212121;
     line-height: 30px;
