--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -51,3 +51,7 @@
     border-bottom: 1px solid #2E79B9 !important;
     box-shadow: 0 1px 0 0 #CCCCCC !important;
 }
+
+.debug {
+   border: 1px solid red;
+}
